# wechore

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  hk.pkl  justfile  mise.toml  pyproject.toml  renovate.json  rumdl.toml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-web.yml  preview-release.yml  release-web.yml  testflight.yml
app/: .swiftlint.yml  README.md  SPEC.md  Workspace.swift
app/Tuist/: Package.swift
app/WeChore/: Info.plist  Project.swift  Tests.plist  WeChore.entitlements
docs/: app-store-compliance.md  ci.md  claude-improvement-pass-execplan.md  cloudkit-setup.md  daily-routine-reliability-execplan.md  onboarding-qr-invites-execplan.md  release-and-distribution.md  release-automation-execplan.md  wechore-chat-first-execplan.md  wechore-conversation-first-release-execplan.md  wechore-mvp-execplan.md  wechore-widget-assignment-accessibility-execplan.md
scripts/: generate-app-icons.sh  resolve_simulator.py
scripts/app_store_connect/: __init__.py  check.py  check_asc.py  preflight.py  provisioning.py
scripts/cloudflare/: __init__.py  setup.py
scripts/cloudkit/: common.sh  doctor.sh  export-schema.sh  validate-schema.sh
scripts/tooling/: __init__.py  appstore_api_key.sh  archive_release.sh  bootstrap.sh  build.sh  ci_build.sh  (+11 more)
tests/: conftest.py  test_app_icons.py  test_ci_workflow.py  test_cloudkit_scripts.py  test_ios_metadata.py  test_release_tooling.py  test_tooling_config.py  test_web_static_site.py
web/: 404.html  index.html  robots.txt  sitemap.xml
(+53 files in other folders)
