[project]
name = "wechore"
version = "0.1.0"
description = "Build, validation, and App Store tooling for WeChore"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"
